# enpm702_group3

./: CMakeLists.txt  README.md
group3_final/: CMakeLists.txt  package.xml
group3_final/include/group3_final/: camera_subscriber_node.hpp  p_navigation_node.hpp  parts_subscriber_node.hpp  transformation_node.hpp
group3_final/src/: camera_subscriber_node.cpp  main.cpp  p_navigation_node.cpp  parts_subscriber_node.cpp  transformation_node.cpp
group3_rwa4/: CMakeLists.txt  package.xml
group3_rwa4/include/group3_rwa4/: bot_sequence.hpp
group3_rwa4/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
group3_rwa4/install/group3_rwa4/share/ament_index/resource_index/package_run_dependencies/: group3_rwa4
group3_rwa4/install/group3_rwa4/share/group3_rwa4/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
group3_rwa4/log/: latest_build
group3_rwa4/src/: bot_sequence.cpp  main.cpp
group_3_final/: CMakeLists.txt  package.xml
group_3_final/include/group_3_final/: camera_subscriber_node.hpp  p_navigation_node.hpp  parts_subscriber_node.hpp  transformation_node.hpp
group_3_final/src/: camera_subscriber_node.cpp  main.cpp  p_navigation_node.cpp  parts_subscriber_node.cpp  transformation_node.cpp
rwa3_3/: CMakeLists.txt
rwa3_3/department/doc/: class_diagram.wsd
rwa3_3/department/doc/html/: annotated.html  annotated_dup.js  class_date-members.html  class_date.html  class_date.js  class_date_a03ecf64f9dcda29cbe2162c0e256b80e_icgraph.map  class_date_a03ecf64f9dcda29cbe2162c0e256b80e_icgraph.md5  class_date_a22f86a623c0778aaf27644d446204285_icgraph.map  class_date_a22f86a623c0778aaf27644d446204285_icgraph.md5  class_date_a51c23aaa97beb5656fefa1e92b1d0e47_cgraph.map  class_date_a51c23aaa97beb5656fefa1e92b1d0e47_cgraph.md5  class_date_a51c23aaa97beb5656fefa1e92b1d0e47_icgraph.map  class_date_a51c23aaa97beb5656fefa1e92b1d0e47_icgraph.md5  class_date_a87b3c3ede7dee726e8779eebfcc0a299_cgraph.map  class_date_a87b3c3ede7dee726e8779eebfcc0a299_cgraph.md5  class_date_a94435332df30a79621420a74610694f0_cgraph.map  class_date_a94435332df30a79621420a74610694f0_cgraph.md5  class_date_a94435332df30a79621420a74610694f0_icgraph.map  class_date_a94435332df30a79621420a74610694f0_icgraph.md5  class_department-members.html  class_department.html  class_department.js  class_department_a2f99bf6e2ab51f530c4901c4ef4fe49e_icgraph.map  class_department_a2f99bf6e2ab51f530c4901c4ef4fe49e_icgraph.md5  class_department_ab262857e8c31975520e8eb321d9828bd_icgraph.map  class_department_ab262857e8c31975520e8eb321d9828bd_icgraph.md5  class_developer-members.html  class_developer.html  class_developer.js  class_developer__coll__graph.map  class_developer__coll__graph.md5  class_developer__inherit__graph.map  class_developer__inherit__graph.md5  class_employee-members.html  class_employee.html  class_employee.js  class_employee__coll__graph.map  class_employee__coll__graph.md5  class_employee__inherit__graph.map  class_employee__inherit__graph.md5  (+154 more)
rwa3_3/department/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  search.css  searchdata.js  variables_0.js  variables_1.js  variables_2.js
rwa3_3/department/include/: date.hpp  department.hpp  developer.hpp  employee.hpp  example.hpp  idbadge.hpp  manager.hpp
rwa3_3/department/src/: date.cpp  department.cpp  developer.cpp  employee.cpp  idbadge.cpp  main.cpp  manager.cpp
rwa4_3/rwa4_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rwa4_3/rwa4_ws/install/group3_rwa4/lib/group3_rwa4/: hello
rwa4_3/rwa4_ws/install/group3_rwa4/share/group3_rwa4/: local_setup.sh  package.sh
rwa4_3/rwa4_ws/install/group3_rwa4/share/group3_rwa4/cmake/: group3_rwa4Config.cmake
rwa4_3/rwa4_ws/log/: latest_build  latest_list
rwa4_3/rwa4_ws/src/group3_rwa4/: CMakeLists.txt
rwa4_3/rwa4_ws/src/group3_rwa4/include/group3_rwa4/: bot_sequence.hpp
rwa4_3/rwa4_ws/src/group3_rwa4/src/: bot_sequence.cpp  main.cpp
rwa4_3/rwa4_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rwa4_3/rwa4_ws/src/install/group3_rwa4/share/group3_rwa4/: package.sh
rwa4_3/rwa4_ws/src/log/: latest_build
rwa5_3/rwa5_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rwa5_3/rwa5_ws/install/bot_waypoint_msgs/share/bot_waypoint_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rwa5_3/rwa5_ws/install/bot_waypoint_msgs/share/bot_waypoint_msgs/msg/: BotWaypoint.idl  (+1 more)
rwa5_3/rwa5_ws/install/group3_rwa5/share/group3_rwa5/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rwa5_3/rwa5_ws/log/: latest_build  latest_list
rwa5_3/rwa5_ws/src/: readme.txt
rwa5_3/rwa5_ws/src/bot_waypoint_msgs/: CMakeLists.txt
rwa5_3/rwa5_ws/src/bot_waypoint_msgs/msg/: BotWaypoint.msg
rwa5_3/rwa5_ws/src/group3_rwa5/: CMakeLists.txt  package.xml
rwa5_3/rwa5_ws/src/group3_rwa5/include/group3_rwa5/: waypoint_publisher.hpp  waypoint_reacher.hpp
rwa5_3/rwa5_ws/src/group3_rwa5/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rwa5_3/rwa5_ws/src/group3_rwa5/install/group3_rwa5/share/group3_rwa5/: package.bash  package.zsh
rwa5_3/rwa5_ws/src/group3_rwa5/log/: latest_build
rwa5_3/rwa5_ws/src/group3_rwa5/src/: main.cpp  waypoint_publisher.cpp  waypoint_reacher.cpp
src/: readme.txt
src/bot_waypoint_msgs/: CMakeLists.txt  package.xml
src/bot_waypoint_msgs/msg/: BotWaypoint.msg
src/group3_rwa5/: CMakeLists.txt  package.xml
src/group3_rwa5/include/group3_rwa5/: waypoint_publisher.hpp  waypoint_reacher.hpp
src/group3_rwa5/src/: main.cpp  waypoint_publisher.cpp  waypoint_reacher.cpp
(+22 files in other folders)
